--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CountProgramm</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  
-    <label id="countLable">0</label><br><br>
-    
+    <label id="countLabel"> 0 </label>
     <div id="Btncontainer">
-        <button id="decreaseBtn" class="buttons">decrease</button>
-        <button id="resetBtn" class="buttons">reset</button>
-        <button id="increaseBtn" class="buttons">increase</button>
+        <button id="decreaseBtn" class="button">decrease</button>
+        <button id="resetBtn" class="button">Reset</button>
+        <button id="increaseBtn" class="button">Increase</button>
     </div>
-<script src="./js/index.js"></script>
+    
+    <script src="index.js"></script>
 </body>
 </html>
